fix: card text aligning on smaller viewports

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -101,8 +101,6 @@
 
         height: 100%;
         padding: 0 1em;
-
-        text-indent: 2em;
       }
     }
   }
